# football-match-predictor

./: .gitignore  README.md  experiment_pipeline.Dockerfile  feature_pipeline.Dockerfile  gcp_experiment_run.Dockerfile  gcp_model_train.Dockerfile  pyproject.toml  server_app.Dockerfile  training_pipeline.Dockerfile
.github/workflows/: ci.yml  deploy.yml
football_match_predictor/config/: input.json
football_match_predictor/experiments/: cross_validation.py  gcp_experiment.py
football_match_predictor/features/: data_provider.py  feature_pipeline.py
football_match_predictor/model/: gcp_model_train.py  predict.py  train_model.py
football_match_predictor/server/: app.py
football_match_predictor/util/: google_cloud_manager.py  hasher.py  logger.py  neptune_manager.py  parameter_retriever.py
tests/: test_data_provider.py
